correction bug slideshow

--- a/slider/index.html
+++ b/slider/index.html
@@ -18,6 +18,16 @@
 
 <body>
 
+
+  <div>
+    <ul id="sliderContainer">
+      <li class="imageContainer"><img src="img/burbure.jpg" alt="image burbure"></li>
+      <li class="imageContainer"><img src="img/eglise.jpg" alt="eglise de burbure"></li>
+      <li class="imageContainer"><img src="img/frites.png" alt="friterie de burbure"></li>
+      <li class="imageContainer"><img src="img/cafe.jpg" alt="cafe de burbure"></li>
+    </ul>
+  </div>
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
